<resources>
    <string name="app_name">Trans.Port.Truck</string>
    <string name="app_menu">Menú inicial</string>
    <string name="app_new_order">Nueva orden</string>
    <string name="app_watch_order">Ver viajes</string>
    <string name="app_settings">Ajustes</string>
    <string name="app_petrol">Repostaje</string>
    <string name="app_maps">Mapa</string>
    <string name="app_change_settings">Cambiar Ajustes</string>
    <string name="app_add_client">Añadir cliente</string>
    <string name="app_watch_petrol">Ver repostajes</string>
    <string name="app_maintenance">Mantenimiento</string>
    <string name="app_watch_maintenance">Ver mantenimientos</string>
    <string name="app_edit_maintenance">Editar mantenimiento</string>
    <string name="app_edit_petrol">Editar repostaje</string>
    <string name="app_edit_order">Editar Orden</string>


    <string name="new_order">Nuevo viaje</string>
    <string name="watch_orders">Ver viajes</string>
    <string name="exit">Salir</string>
    <string name="settings">Ajustes</string>
    <string name="clients">Añadir cliente</string>

    <string name="driver">Nombre</string>
    <string name="transp">Transportista</string>
    <string name="truck_id">Matrícula camión</string>
    <string name="truck_number">Número camión</string>
    <string name="platform_id">Matrícula plataforma</string>
    <string name="order_id">Número de orden</string>
    <string name="date">Fecha</string>
    <string name="charging_order_day">Día carga contenedor</string>
    <string name="charging_order_hour">Hora carga contenedor</string>
    <string name="discharging_order_day">Día descarga contenedor</string>
    <string name="discharging_order_hour">Hora descarga contenedor</string>
    <string name="discharging">Descarga contenedor</string>
    <string name="charging">Carga contenedor</string>
    <string name="client">Cliente</string>
    <string name="charger">Cargador</string>
    <string name="destiny">Destino</string>
    <string name="address">Dirección del cliente</string>
    <string name="phone_number">Teléfono del cliente</string>
    <string name="container_id">Número de contenedor</string>
    <string name="arrival_time">Llegada</string>
    <string name="departure_time">Salida</string>
    <string name="text_area">Observaciones</string>
    <string name="hour_aperture">Horario</string>
    <string name="city">Ciudad</string>
    <string name="state">Provincia</string>
    <string name="PC">Código postal</string>
    <string name="lat">Latitud</string>
    <string name="lon">Longitud</string>
    <string name="price">Precio</string>
    <string name="add_client">Nombre del cliente</string>


    <string name="button_login">Acceder</string>
    <string name="button_order">Guardar viaje</string>
    <!--<string name="button_open_maps">Ver destino</string>-->
    <string name="title_activity_maps">Map</string>
    <string name="button_terrain">Terreno</string>
    <string name="button_satellite">Satelite</string>
    <string name="button_position">Posición actual</string>
    <string name="button_obtain_time">Obtener hora</string>
    <string name="button_petrol">Repostar</string>
    <!--<string name="button_spare_parts">Taller</string>-->
    <string name="button_add_client">Añadir cliente</string>
    <string name="button_change_settings">Cambiar ajustes</string>
    <string name="button_maintenance">Mantenimiento</string>
    <string name="button_watch_petrol">Ver repostajes</string>
    <string name="button_add_maintenance">Añadir mantenimiento</string>
    <string name="button_add_maint">Añadir mantenim.</string>
    <string name="button_add_petrol">Añadir repostaje</string>
    <string name="button_watch_maintenance">Ver mantenimientos</string>
    <string name="button_edit_maintenance">Guardar cambios</string>
    <string name="petrol_date">Fecha repostaje</string>
    <string name="petrol_hour">Hora repostaje</string>
    <string name="petrol_km">Kilómetros</string>
    <string name="petrol_liters">Litros</string>
    <string name="petrol_send">Repostaje</string>

    <string name="maintenance_send">Guardar mantenimiento</string>
    <string name="maintenance_type">Tipo de mantenimiento</string>

    <string name="personal_info">Información personal</string>
    <string name="client_info">Información del cliente</string>
    <string name="travel_info">Información del viaje</string>
    <string name="edit_order_truckId">Camión</string>
    <string name="edit_order_truckNum">Número</string>
    <string name="edit_order_plataforma">Plataforma</string>
    <string name="edit_order_container">Nº Contenedor</string>
    <string name="edit_order_address">Dirección</string>
    <string name="edit_order_phone">Teléfono</string>

</resources>



