<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.casa.myapplication.Model.MenuActivity">


    <RelativeLayout
            android:layout_width="368dp"
            android:layout_height="495dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:id="@+id/userDataField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text=" "
                android:textAlignment="center"
                android:textSize="22dp" />

            <Button
                android:id="@+id/new_order"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="79dp"
                android:background="@drawable/circle_button"
                android:padding="15dp"
                android:text="@string/new_order"
                android:layout_below="@+id/userDataField"
                android:layout_toRightOf="@+id/watch_orders"
                android:layout_toEndOf="@+id/watch_orders"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" />

            <Button
                android:id="@+id/watch_orders"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/circle_button"
                android:padding="15dp"
                android:text="@string/watch_orders"
                android:layout_marginLeft="23dp"
                android:layout_marginStart="23dp"
                android:layout_alignBaseline="@+id/new_order"
                android:layout_alignBottom="@+id/new_order"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/petrol_activity"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@+id/new_order"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="33dp"
            android:background="@drawable/circle_button"
            android:text="@string/petrol_send" />

        </RelativeLayout>

</android.support.constraint.ConstraintLayout>
